<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Application</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="attached_file_uri">Attached File URI</string>
    <string name="search">search</string>
    <string name="sender">sender</string>
    <string name="receiver">Receiver</string>
    <string name="submit">submit</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="employee_s_name">Employee’s name</string>
    <string name="back">back</string>
    <string name="view">view</string>
    <string name="approve">approve</string>
    <string name="reject">reject</string>
    <string name="now">now</string>
    <string name="enter_a_schedule_value">enter a schedule value</string>
    <string name="select_schedule">Select schedule</string>
    <string name="select_compound">Select Compound</string>
    <string name="select_machine">Select Machine</string>
    <string name="description">Description</string>
    <string name="activity_name">Activity name</string>
    <string name="create_activity">Create Activity</string>
</resources>
